# livraria

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor.py  0003_compra.py  0004_alter_autor_options_livro.py  0004_itenscompra.py  0005_livro_autores.py
livraria/models/: __init__.py  autor.py  compra.py  livro.py
livraria/serializers/: __init__.py  autor.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
